Añadida ruta equipos que cumple con criterios RESTful. Se añade el criterio para las rutas de ID único.
